fix(interactive): add cis for Insight with GOpt (#4200)
<!--
Thanks for your contribution! please review
https://github.com/alibaba/GraphScope/blob/main/CONTRIBUTING.md before
opening an issue.
-->

## What do these changes do?

<!-- Please give a short brief about these changes. -->

As titled.
This pr add test suits based on the new GOpt-based compilation, in the
Insight+Groot ci, including:
* Gremlin Tests on ModernGraph
* Cypher Tests on MovieGraph
* Pattern Tests, IC Tests, SimpleTest on LdbcGraph

## Related issue number

<!-- Are there any issues opened that will be resolved by merging this
change? -->

#4163

---------

Co-authored-by: shirly121 <yihe.zxl@alibaba-inc.com>

--- a/.github/workflows/gss.yml
+++ b/.github/workflows/gss.yml
@@ -84,11 +84,20 @@ jobs:
         mvn clean install -Pgroot-data-load --quiet
         sccache --show-stats
 
-    - name: Gremlin Test
+    # - name: Gremlin Test
+    #   run: |
+    #     . ${HOME}/.graphscope_env
+    #     cd interactive_engine/groot-server
+    #     # the ir-core based test
+    #     mvn test -P gremlin-test
+
+    - name: Groot with GOpt Integration Test
       run: |
         . ${HOME}/.graphscope_env
-        cd interactive_engine/groot-server
-        mvn test -P gremlin-test
+        git clone -b master --single-branch --depth=1 https://github.com/7br/gstest.git /tmp/gstest
+        mv /tmp/gstest/flex/ldbc-sf01-long-date /tmp/gstest/ldbc
+        cp -r flex/interactive/examples/movies /tmp/gstest/
+        cd interactive_engine/groot-client && ./gopt_groot_test.sh
 
     - name: Upload tools for helm test to Artifact
       uses: actions/upload-artifact@v4
