--- a/interactive_engine/groot-server/pom.xml
+++ b/interactive_engine/groot-server/pom.xml
@@ -28,6 +28,12 @@
     <dependency>
       <groupId>com.alibaba.graphscope</groupId>
       <artifactId>compiler</artifactId>
+      <exclusions>
+          <exclusion>
+              <groupId>org.slf4j</groupId>
+              <artifactId>slf4j-simple</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.alibaba.pegasus</groupId>
