--- a/.github/workflows/gaia.yml
+++ b/.github/workflows/gaia.yml
@@ -95,7 +95,7 @@ jobs:
     - name: Ir Integration Test on Experimental Store
       run: |
         . ${HOME}/.graphscope_env
-        git clone -b master --single-branch --depth=1 https://github.com/7br/gstest.git /tmp/gstest
+        git clone -b master --single-branch --depth=1 https://github.com/7br/gstest.git /tmp/gstest || true
         cd ${GITHUB_WORKSPACE}/interactive_engine/compiler && ./ir_experimental_ci.sh
 
     - name: Ir Integration Pattern Test on Experimental Store
