--- a/.github/workflows/k8s-ci.yml
+++ b/.github/workflows/k8s-ci.yml
@@ -501,8 +501,9 @@ jobs:
         uses: codecov/codecov-action@v4
         continue-on-error: true
         with:
-          file: ./python/coverage.xml
-          fail_ci_if_error: false
+          files: ./python/coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
       - name: HDFS test
         if: false  # FIXME(siyuan): Open this test
