fix flex format cpp check
Committed-by: xiaolei.zl from Dev container

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -138,7 +138,7 @@ jobs:
             exit -1
         fi
 
-        push flex
+        pushd flex
         # except for files end with act.h 
         find ./bin ./codegen ./engines ./storages ./engines ./tests ./utils ./otel -name "*.h" ! -name "*act.h" ! -name "*actg.h" | xargs clang-format -i --style=file
         find ./bin ./codegen ./engines ./storages ./engines ./tests ./utils ./otel -name "*.cc" ! -name "*act.cc" | xargs clang-format -i --style=file
