--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -213,12 +213,10 @@ jobs:
         python3 -m black --check --diff .
         python3 -m flake8 .
         popd
-        pushd flex/interactive/sdk/python/gs_interactive
+        pushd flex/interactive/sdk/python
         python3 -m isort --check --diff .
         python3 -m black --check --diff .
-        # only check client and tests, to avoid checking generated code under api, client/generated, etc.
-        python3 -m flake8 ./client 
-        python3 -m flake8 ./tests 
+        python3 -m flake8 .
         popd
 
     - name: Generate Docs
