--- a/flex/interactive/sdk/python/requirements.txt
+++ b/flex/interactive/sdk/python/requirements.txt
@@ -1,7 +1,7 @@
 python_dateutil >= 2.5.3
 setuptools >= 21.0.0
 urllib3 >= 1.25.3, < 2.1.0
-pydantic >= 2
+pydantic >= 2, <= 2.8.2
 typing-extensions >= 4.7.1
 neo4j >= 4.4.19
 gremlinpython >= 3.4.10
