use a different profile to generate no-gaia-ir jar
Committed-by: xiaolei.zl from Dev container

--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -165,6 +165,7 @@
         <dependency>
             <groupId>com.alibaba.graphscope</groupId>
             <artifactId>interactive</artifactId>
+            <classifier>${interactive.sdk.classifier}</classifier>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
