--- a/flex/interactive/sdk/java/pom.xml
+++ b/flex/interactive/sdk/java/pom.xml
@@ -378,6 +378,27 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>no-gaia-ir</id>  
+            <activation>  
+                <activeByDefault>false</activeByDefault>  
+            </activation>  
+            <build>  
+                <plugins>  
+                    <plugin>  
+                        <groupId>org.apache.maven.plugins</groupId>  
+                        <artifactId>maven-jar-plugin</artifactId>  
+                        <configuration>  
+                            <excludes>  
+                                <exclude>com/alibaba/graphscope/gaia/**</exclude>  
+                                <exlucde>
+                            </excludes>  
+                            <classifier>${no-gaia-ir-classifier}</classifier>
+                        </configuration>  
+                    </plugin>  
+                </plugins>  
+            </build>  
+        </profile>
     </profiles>
 
     <dependencies>
@@ -534,5 +555,6 @@
         <opentelemetry-bom.version>1.37.0</opentelemetry-bom.version>
         <javadoc.output.destDir>${project.build.directory}/javadoc</javadoc.output.destDir>
         <javadoc.output.destDir>reference</javadoc.output.destDir>
+        <no-gaia-ir-classifier>no-gaia-ir</no-gaia-ir-classifier>
     </properties>
 </project>
