refactor(interactive): Resolve the dependency problem between compiler and interactive SDK (#4284)
The Interactive SDK and compiler both rely on gaia-ir-proto, including
the protoc-generated classes. Previously, we used the maven-shade-plugin
to shade the protoc files from the Interactive SDK, but this led to
other build issues, as noted in PR #4255.

In this PR, we address the problem by adding an additional jar
classifier, `no-gaia-ir`, which can be easily utilized by the compiler.

--- a/flex/interactive/sdk/java/pom.xml
+++ b/flex/interactive/sdk/java/pom.xml
@@ -148,13 +148,18 @@
                 <version>3.3.0</version>
                 <executions>
                     <execution>
+                        <phase>package</phase>
                         <goals>
-                            <goal>test-jar</goal>
+                            <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>com/alibaba/graphscope/gaia/**</exclude>
+                            </excludes>
+                            <classifier>${no-gaia-ir-classifier}</classifier>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -534,5 +539,6 @@
         <opentelemetry-bom.version>1.37.0</opentelemetry-bom.version>
         <javadoc.output.destDir>${project.build.directory}/javadoc</javadoc.output.destDir>
         <javadoc.output.destDir>reference</javadoc.output.destDir>
+        <no-gaia-ir-classifier>no-gaia-ir</no-gaia-ir-classifier>
     </properties>
 </project>
