arrow backward compatibility
Committed-by: xiaolei.zl from Dev container

--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -142,13 +142,17 @@ if (NOT Arrow_FOUND)
 else ()
     include_directories(SYSTEM ${ARROW_INCLUDE_DIR})
     if (USE_STATIC_ARROW)
-        if (TARGET arrow_static)
+        if (TARGET Arrow::arrow_static)
+            set(ARROW_LIB Arrow::arrow_static)
+        elseif (TARGET arrow_static) # For backward compatibility, see https://arrow.apache.org/docs/cpp/build_system.html#available-variables-and-targets
             set(ARROW_LIB arrow_static)
         else()
             message(FATAL_ERROR "Building with USE_STATIC_ARROW=ON, but arrow_static target not found")
         endif()
     else ()
-        if (TARGET arrow_shared)
+        if (TARGET Arrow::arrow_shared)
+            set(ARROW_LIB Arrow::arrow_shared)
+        elseif (TARGET arrow_shared) # For backward compatibility
             set(ARROW_LIB arrow_shared)
         else()
             message(FATAL_ERROR "Building with USE_STATIC_ARROW=OFF, but arrow_shared target not found")
