implement wal ingestion and wal consuming
Committed-by: xiaolei.zl from Dev container

--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -64,10 +64,16 @@ if (ENABLE_KAFKA)
         message(STATUS "cppkafka found, build without third_party/cppkafka")
     else ()
         add_subdirectory(third_party/cppkafka)
+        # if cppkafka/CMakeLists.txt not exits, tell user  to run git submodule update --init --recursive
+        if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/third_party/cppkafka/CMakeLists.txt)
+            message(FATAL_ERROR "cppkafka not found, please run git submodule update --init --recursive")
+        endif ()
         include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/third_party/cppkafka/include)
         set (CppKafka_INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/cppkafka/build)
         list (APPEND CMAKE_PREFIX_PATH ${CppKafka_INSTALL_DIR})
-        find_package (CppKafka CONFIG REQUIRED)
+        # find_package (CppKafka CONFIG REQUIRED)
+        # alias target
+        add_library(CppKafka::cppkafka ALIAS cppkafka)
     endif ()
     add_definitions(-DENABLE_KAFKA)
 endif()
