--- a/flex/tests/wal_writer/CMakeLists.txt
+++ b/flex/tests/wal_writer/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(wal_writer_test ${CMAKE_CURRENT_SOURCE_DIR}/wal_writer_test.cc)
-target_link_libraries(wal_writer_test PUBLIC CppKafka::cppkafka)
+target_link_libraries(wal_writer_test PUBLIC CppKafka::cppkafka ${LIBGRAPELITE_LIBRARIES} flex_graph_db)
