--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -106,11 +106,16 @@ jobs:
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
-        name: interactive_build
+        name: interactive_build-${{ github.sha }}
 
     - name: Setup tmate session
       if: true
       uses: mxschmitt/action-tmate@v3
+
+    - name: Extract build artifacts
+      run: |
+        cd ${GITHUB_WORKSPACE}
+        tar -zxf flex/build.tar.gz
 
     - name: Build
       env:
@@ -464,8 +469,12 @@ jobs:
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
-        name: interactive_build
+        name: interactive_build-${{ github.sha }}
 
+    - name: Extract build artifacts
+      run: |
+        cd ${GITHUB_WORKSPACE}
+        tar -zxf flex/build.tar.gz
 
     - name: Test GRIN on mutable csr 
       run: |
