--- a/charts/graphscope-store/values.yaml
+++ b/charts/graphscope-store/values.yaml
@@ -595,6 +595,27 @@ queryExecutionTimeoutMs: 600000
 graphPlannerJoinMinPatternSize: 5
 graphPlannerCboGlogueSize: 3
 
+## Log Persistence parameters
+##
+logPersistence:
+  ## Enable persistence using Persistent Volume Claims
+  enabled: false
+  ## If true, use a Persistent Volume Claim, If false, use emptyDir
+  existingClaim: ""
+  ## Persistent Volume storage class
+  storageClass: ""
+  ## Persistent Volume access modes
+  accessModes:
+  - ReadWriteOnce
+  ## Persistent Volume size
+  size: 2Gi
+  ## Persistent Volume annotations
+  annotations: {}
+  ## Persistent Volume labels
+  selector: {}
+  ## mountPath for the Persistent Volume
+  mountPath: "/var/log/graphscope"
+
 ## Key-value pair separated by ;
 ## For example extraConfig="k1=v1;k2=v2"
 extraConfig: ""
