--- a/charts/graphscope-store/templates/frontend/statefulset.yaml
+++ b/charts/graphscope-store/templates/frontend/statefulset.yaml
@@ -144,7 +144,16 @@ spec:
           configMap:
             name: {{ include "graphscope-store.configmapName" . }}
             defaultMode: 0755
+        {{- if not .Values.logPersistence.enabled }}
+        - name: log
+          emptyDir: {}
+        {{- else if .Values.logPersistence.existingClaim }}
+        - name: log
+          persistentVolumeClaim:
+            claimName: {{ printf "%s" (tpl .Values.logPersistence.existingClaim .) }}
+        {{- end }}
   volumeClaimTemplates:
+    {{- if and .Values.logPersistence.enabled (not .Values.logPersistence.existingClaim) }}
     - metadata:
         name: log
         {{- if .Values.persistence.annotations }}
@@ -165,4 +174,5 @@ spec:
         {{- if .Values.logPersistence.selector }}
         selector: {{- include "graphscope-store.tplvalues.render" (dict "value" .Values.logPersistence.selector "context" $) | nindent 10 }}
         {{- end -}}
+    {{- end }}
 {{- end }}
