--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -317,6 +317,27 @@ jobs:
         cd ${GITHUB_WORKSPACE}/interactive_engine/
         mvn clean install -Pexperimental -DskipTests -q
 
+    - name: Test physical plan generation
+      run:
+        cd ${GITHUB_WORKSPACE}/flex/build
+        cat > /tmp/physical_plan_gen_config.yaml <<EOF
+        compiler:
+          planner:
+            is_on: true
+            opt: CBO
+            rules:
+              - FilterIntoJoinRule
+              - FilterMatchRule
+              - NotMatchToAntiJoinRule
+          physical.opt.config: proto
+        EOF
+        echo "  meta.reader.schema.uri: ${GITHUB_WORKSPACE}/flex/interactive/examples/modern_graph/graph.yaml" >> /tmp/physical_plan_gen_config.yaml
+        echo "  meta.reader.statistics.uri: ${GITHUB_WORKSPACE}/interactive_engine/compiler/src/test/resources/statistics/modern_statistics.json" >> /tmp/physical_plan_gen_config.yaml
+                
+        ./tests/planner/graph_planner_test ${GITHUB_WORKSPACE}/interactive_engine/compiler/target/compiler-0.0.1-SNAPSHOT.jar:${GITHUB_WORKSPACE}/interactive_engine/compiler/target/libs/ \
+          ${GITHUB_WORKSPACE}/interactive_engine/executor/ir/target/release/ ${GITHUB_WORKSPACE}/flex/interactive/examples/modern_graph/graph.yaml \
+          /tmp/physical_plan_gen_config.yaml "MATCH(n) return count(n);"
+
     - name: Run End-to-End cypher adhoc ldbc query test
       env:
         GS_TEST_DIR: ${{ github.workspace }}/gstest
